# argo-floats-in-baltic

./: .gitattributes  .gitignore  CLAUDE.md  config.toml  main.py  pyproject.toml
.github/workflows/: run-pipeline.yml
data/store/: D6_2024.nc  cycle_action_history.parquet  errors.parquet  floats_meta.parquet  forecast_history.parquet  leg_history.parquet  surfacings.parquet  trajectories.parquet
data/store_backup_2026-07-15_pre-depth-fix-reset/: errors.parquet  floats_meta.parquet  trajectories.parquet
data/store_backup_2026-07-15_pre-surfacing-fix-reset/: cycle_action_history.parquet  errors.parquet  forecast_history.parquet  surfacings.parquet
docs/: index.html  map.html
docs/data/: floats.json  leaderboard.json
notebooks/: bad_code.ipynb  fcoo_model_viewer.py  model_opener.ipynb  prediction_diagnostics.ipynb  surfacing_predictions.ipynb
scripts/: fixture.py
src/: cycle_extractor.py  data_handler.py  float_store.py  run.py  simulate.py  web_export.py
